<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backoficialdois"
    tools:context="com.example.osvaldoairon.suasnotas.CadActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="Nome:"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/inf"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_nome"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_nome"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="Matricula:"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/inf"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_matricula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_matricula"
                    android:inputType="numberSigned" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="Disciplina:"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/padrao_name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_disciplina"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="Notas:"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/padrao_nome"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_n1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_nota1"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/edt_n2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_nota2"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/edt_n3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_nota3"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/txt_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_final"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btn_calcular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="Calcular"
                        android:textColor="@android:color/background_dark"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/btn_salvar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="Salvar"
                        android:textColor="@android:color/background_dark"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
